# ProwlDash

./: CHANGELOG.md  ProwlDash_Improvement_PRD.txt  README.md  generate.py  prowldash.py  pyproject.toml  run_scans_fixed.sh  test_output.txt  test_output_2.txt
.github/workflows/: ci.yml
ProwlDash/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  ProwlDash_Improvement_PRD.docx  README.md  SECURITY_PENTEST_SUMMARY.md  pentest_report.py  prowldash.py  pyproject.toml
ProwlDash/.github/workflows/: ci.yml
ProwlDash/docs/: index.html  performance_journey.md  security.md
ProwlDash/templates/: dashboard_template.html
ProwlDash/tests/: test_core.py  test_generation.py  test_integration.py
ProwlDash/tests/fixtures/: cis_5.0_aws_compliance.csv  malformed.csv  mitre_subtechnique.csv  visual_docs_data.csv
bench_temp/: bench_0.csv  bench_1.csv  bench_2.csv  bench_3.csv
docs/: index.html  performance_journey.md
templates/: cis_template.html  dashboard_template.html  fsbp_template.html
tests/: test_core.py  test_integration.py  test_prowldash.py
tests/fixtures/: cis_2.0_aws_compliance.csv  generic_aws_scan.csv  mitre_multiple.csv
tools/: benchmark.py  evaluate_matching.py
