[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prowldash"
version = "5.0.0"
description = "Generate interactive HTML compliance dashboards from Prowler security scans"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "Jayanth Kumar" }
]
keywords = ["prowler", "aws", "security", "compliance", "dashboard", "cis", "hipaa", "pci-dss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]

[project.scripts]
prowldash = "prowldash:main"

[project.urls]
Homepage = "https://github.com/jayanthkumarak/ProwlDash"
Documentation = "https://github.com/jayanthkumarak/ProwlDash#readme"
Repository = "https://github.com/jayanthkumarak/ProwlDash"
Issues = "https://github.com/jayanthkumarak/ProwlDash/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py37"
